--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -8,7 +8,7 @@ phases:
     commands:
       - echo Build started on `date`
       - echo Building the Docker image...
-      - docker build -t $REPOSITORY_URI:latest .
+      - docker build -t $REPOSITORY_URI:$IMAGE_TAG .
       - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
   post_build:
     commands:
@@ -23,3 +23,5 @@ phases:
 
 artifacts:
   files: imagedefinitions.json
+
+  docker build -t 362787105273.dkr.ecr.us-east-1.amazonaws.com/bittensor-api:latest .
