--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -8,6 +8,7 @@ phases:
     commands:
       - echo Build started on `date`
       - echo Building the Docker image...
+      - echo DOCKER PATH $REPOSITORY_URI:$IMAGE_TAG
       - docker build -t $REPOSITORY_URI:$IMAGE_TAG .
       - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
   post_build:
