--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -8,19 +8,19 @@ phases:
     commands:
       - echo Build started on `date`
       - echo Building the Docker image...
-      - echo DOCKER PATH $REPOSITORY_URI:$IMAGE_TAG
-      - docker build -t $REPOSITORY_URI:$IMAGE_TAG .
-      - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
+      - echo DOCKER PATH ${REPOSITORY_URI}:${IMAGE_TAG}
+      - docker build -t ${REPOSITORY_URI}:${IMAGE_TAG} .
+      - docker tag ${REPOSITORY_URI}:latest ${REPOSITORY_URI}:${IMAGE_TAG}
   post_build:
     commands:
       - echo Build completed on `date`
       - echo Logging in to Amazon ECR...
       - aws --version
-      - aws ecr get-login-password --region $AWS_DEFAULT_REGION
+      - aws ecr get-login-password --region ${AWS_DEFAULT_REGION}
       - echo Pushing the Docker images...
-      - docker push $REPOSITORY_URI:$IMAGE_TAG
+      - docker push ${REPOSITORY_URI}:${IMAGE_TAG}
       - echo Writing image definitions file...
-      - printf '[{"name":"your-container-name","imageUri":"%s"}]' $REPOSITORY_URI:$CODEBUILD_RESOLVED_SOURCE_VERSION > imagedefinitions.json
+      - printf '[{"name":"your-container-name","imageUri":"%s"}]' ${REPOSITORY_URI}:$CODEBUILD_RESOLVED_SOURCE_VERSION > imagedefinitions.json
 
 artifacts:
   files: imagedefinitions.json
