--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -16,7 +16,7 @@ phases:
       - echo Build completed on `date`
       - echo Logging in to Amazon ECR...
       - aws --version
-      - aws ecr get-login-password --region us-east-1 | sed 's|https://||'
+      - eval $(aws ecr get-login --region us-east-1 --no-include-email | sed 's|https://||')
       - echo Pushing the Docker images...
       - docker push 362787105273.dkr.ecr.us-east-1.amazonaws.com/bittensor-api:latest
       - echo Writing image definitions file...
