--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -8,15 +8,14 @@ phases:
     commands:
       - echo Build started on `date`
       - echo Building the Docker image...
-      - echo DOCKER PATH 362787105273.dkr.ecr.us-east-1.amazonaws.com/bittensor-api:latest
-      - docker build -t 362787105273.dkr.ecr.us-east-1.amazonaws.com/bittensor-api:latest .
-      - docker tag 362787105273.dkr.ecr.us-east-1.amazonaws.com/bittensor-api:latest 362787105273.dkr.ecr.us-east-1.amazonaws.com/bittensor-api:latest
+      - docker build -t bittensor-api .
+      - docker tag bittensor-api:latest 362787105273.dkr.ecr.us-east-1.amazonaws.com/bittensor-api:latest
   post_build:
     commands:
       - echo Build completed on `date`
       - echo Logging in to Amazon ECR...
       - aws --version
-      - aws ecr get-login-password --region us-east-1 --no-include-email | sed 's|https://||'
+      - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 362787105273.dkr.ecr.us-east-1.amazonaws.com
       - echo Pushing the Docker images...
       - docker push 362787105273.dkr.ecr.us-east-1.amazonaws.com/bittensor-api:latest
       - echo Writing image definitions file...
