--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -15,7 +15,7 @@ phases:
       - echo Build completed on `date`
       - echo Logging in to Amazon ECR...
       - aws --version
-      - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 362787105273.dkr.ecr.us-east-1.amazonaws.com
+      - aws ecr get-login-password --region us-east-1 --profile someprofile | docker login --username AWS --password-stdin 362787105273.dkr.ecr.us-east-1.amazonaws.com
       - echo Pushing the Docker images...
       - docker push 362787105273.dkr.ecr.us-east-1.amazonaws.com/bittensor-api:latest
       - echo Writing image definitions file...
