--- a/core/buildspec.yaml
+++ b/core/buildspec.yaml
@@ -8,6 +8,7 @@ phases:
     commands:
       - echo Build started on `date`
       - echo Building the Docker image...
+      - cd ./core
       - docker build -t bittensor-api .
       - docker tag bittensor-api:latest 362787105273.dkr.ecr.us-east-1.amazonaws.com/bittensor-api:latest
   post_build:
