--- a/core/buildspec.yaml
+++ b/core/buildspec.yaml
@@ -20,8 +20,7 @@ phases:
       - echo Pushing the Docker images...
       - docker push 362787105273.dkr.ecr.us-east-1.amazonaws.com/bittensor-api:latest
       - echo Writing image definitions file...
-      - cd ./core
-      - printf '[{"name":"fast-api","imageUri":"%s"}]' 362787105273.dkr.ecr.us-east-1.amazonaws.com/bittensor-api:$CODEBUILD_RESOLVED_SOURCE_VERSION > imagedefinitions.json
+      - printf '[{"name":"fast-api","imageUri":"%s"}]' 362787105273.dkr.ecr.us-east-1.amazonaws.com/bittensor-api:$CODEBUILD_RESOLVED_SOURCE_VERSION > ./core/imagedefinitions.json
 
 artifacts:
   files: imagedefinitions.json
