--- a/core/Dockerfile
+++ b/core/Dockerfile
@@ -10,10 +10,8 @@ COPY . /app
 # Install any needed packages specified in requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Make port 8000 available to the world outside this container
-EXPOSE 8000
-
-# Define environment variable
+# Make port 80 available to the world outside this container
+EXPOSE 80
 
 # Run app.py when the container launches
-CMD ["python3", "manage.py", "runserver", "0.0.0.0:8000"]
+CMD python manage.py runserver 0.0.0.0:80
