--- a/core/Dockerfile
+++ b/core/Dockerfile
@@ -1,5 +1,5 @@
 # Use an official Python runtime as a parent image
-FROM --platform=linux/amd64 public.ecr.aws/docker/library/python:3.10-slim as production
+FROM public.ecr.aws/docker/library/python:3.10-slim as production
 
 # Set the working directory in the container
 WORKDIR /app
